...
struct CharacterDetailView_Previews: PreviewProvider {
    static var previews: some View {
        NavigationView {
            // Create a sample character for previewing
            CharacterDetailView(character: Character(
                id: "1", 
                name: "Luke Skywalker", 
                filmConnection: FilmConnectionSummary(totalCount: 4), 
                height: 172, 
                mass: 77,
                birthYear: "19BBY", 
                hairColor: "blond", 
                eyeColor: "blue", 
...
